# Membrane_particle_interaction_dynamics

./: CMakeLists.txt  Force Visulaization.ipynb  Post_Processing.ipynb  README.md  VersionConfig.h.in
Mesh/: Prolate_Fine.off  equilibrated_biconcave.off  equilibrated_biconcave_2562.off  logfile.txt  oblate.off  oblate_2562.off  oblate_particle .off  prolate.off  restart.off  run_file.txt  test
cmake/: libigl.cmake
run_script/: restart_parameters.txt  run_parameters.txt
src/: RigidBody.cpp  RigidBody.h  a.out  constant.h  energy.cpp  energy.h  force.h  integrate.cpp  integrate.h  main.cpp  mesh.h  meshedparticle.cpp  meshedparticle.h  meshedvesicle.cpp  meshedvesicle.h  meshops.cpp  meshops.h  parameters.cpp  parameters.h  rigidbody.cpp  rigidbody.h  run_file.txt  simulation.h  test  test.cpp
test/: MemDynamics  equilibrated.off  logfile.txt  mesh_Visualization.m  particle_sphere_0.2.off  run_parameters.txt  start.off
test_forcedwrapping_wangle/: run_parameters.txt
test_particle_option/: run_parameters.txt
test_tol/: run_parameters.txt
visualization/: Paraview_Visualization.py  Post_Processing.ipynb  mesh_Visualization.m  mesh_Visualization_noparticle.m  mesh_vis.m  visualization_noparticle_video.m  visualization_video.m
